prepare release 11.0 for archive

--- a/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb110/nb110.asciidoc
@@ -45,14 +45,14 @@ NOTE: It's NOT recommended to link to github.
 ////
 Apache NetBeans 11.0 is available for download from your closest Apache mirror. For this release no official installers are provided, please just download the binaries and unzip them.
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip[incubating-netbeans-11.0-source.zip] 
-(link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.sha512[SHA-512],
-link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.asc[PGP ASC])
+- Source: link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip[incubating-netbeans-11.0-source.zip] 
+(link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip.asc[PGP ASC])
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip[incubating-netbeans-11.0-bin.zip] (
-link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.sha512[SHA-512],
-link:https://downloads.apache.org/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.asc[PGP ASC])
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip[incubating-netbeans-11.0-bin.zip] (
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-bin.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/11.0/javadoc
 
@@ -80,7 +80,7 @@ To build Apache NetBeans (incubating) 11.0 from source you need:
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip[incubating-netbeans-11.0-source.zip] in a directory of your liking.
+1. Unzip link:https://archive.apache.org/dist/incubator/netbeans/incubating-netbeans/incubating-11.0/incubating-netbeans-11.0-source.zip[incubating-netbeans-11.0-source.zip] in a directory of your liking.
 2. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE. Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 
 == Community approval
