rewrite archive page

--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 11 feature update 3 (NB 11.3)
+
+Apache NetBeans 11.3 was released on February 24, 2020.
+
+link:/download/nb113/index.html[Features, role="button"] link:/download/nb113/nb113.html[Download, role="button success"]
+
 == Apache NetBeans 11 feature update 2 (NB 11.2)
 
 Apache NetBeans 11.2 was released on October 25, 2019.
@@ -40,6 +46,12 @@ link:/download/nb112/index.html[Features, role="button"] link:/download/nb112/nb
 Apache NetBeans 11.1 was released on July 22, 2019.
 
 link:/download/nb111/index.html[Features, role="button"] link:/download/nb111/nb111.html[Download, role="button success"]
+
+== Apache NetBeans 11 LTS (NB 11.0)
+
+Apache NetBeans 11 LTS version of the IDE, released on April 4, 2019.
+
+link:/download/nb110/index.html[Features, role="button"] link:/download/nb110/nb110.html[Download, role="button success"]
 
 == Apache NetBeans 10.0
 
