--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -40,17 +40,17 @@ Apache NetBeans is released four times a year. For details, see link:https://cwi
 TIP: Our annual May/June release is a
 long-term support (LTS) release that benefits from our link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT+FAQ[NetCAT community testing process], and remains available and supported for a year.  Our other quarterly releases provide early access to new features, which are tested and consolidated in the subsequent LTS release.
 
-== Apache NetBeans 11 feature update 3 (NB 11.3)
+///== Apache NetBeans 12 feature update 1 (NB 12.1)
+///
+///Latest version of the IDE, released on February 24, 2020.
+///
+///link:/download/nb121/index.html[Features, role="button"] link:/download/nb121/nb121.html[Download, role="button success"]
 
-Latest version of the IDE, released on February 24, 2020.
+== Apache NetBeans 12 LTS (NB 12.0)
 
-link:/download/nb113/index.html[Features, role="button"] link:/download/nb113/nb113.html[Download, role="button success"]
+Latest LTS version of the IDE, released on June 4, 2020.
 
-== Apache NetBeans 11 LTS (NB 11.0)
-
-Latest LTS version of the IDE, released on April 4, 2019.
-
-link:/download/nb110/index.html[Features, role="button"] link:/download/nb110/nb110.html[Download, role="button success"]
+link:/download/nb120/index.html[Features, role="button"] link:/download/nb120/nb120.html[Download, role="button success"]
 
 == Older releases
 
