JIRA list of issues for Gradle

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -234,6 +234,8 @@ TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The
 
 However, there are multiple other new features, enhancements, and fixes for Gradle users, which together provide comprehensive Gradle tooling for the first time and fills in multiple gaps. These include upgraded Gradle Tooling API to 6.3, new Java Frontend Application wizard for Gradle, debugger support for Gradle Web projects, support for custom Gradle Home, support for composite projects, Kotlin-based Gradle projects, and forceable reloading of Gradle projects.
 
+link:https://issues.apache.org/jira/browse/NETBEANS-4239?jql=project%3DNetBeans%20AND%20component%20in%20(%22projects%20-%20Gradle%22%2C%20%22projects%20-%20Gradle%20Java%20EE%22)%20%20and%20resolution%20in%20(Fixed%2CDone%2CImplemented)%20and%20fixVersion%20in%20(11.1%2C11.2%2C11.3%2C12.0)[Complete list of fixes for Gradle in 12.0.]
+
 == PHP, JavaScript, and HTML
 
 The key new feature for PHP users in Apache NetBeans 12.0 is its support for PHP 7.4.
