PHP JIRA issues

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -245,7 +245,7 @@ The key new feature for PHP users in Apache NetBeans 12.0 is its support for PHP
 image::php-7.4.png[role="left", link="php-7.4.png"]
 -- 
 
-Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
+Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here] and see all fixes in the PHP area in 12.0 link:https://issues.apache.org/jira/browse/NETBEANS-3968?jql=project%20%3D%20NETBEANS%20AND%20resolution%20in%20(Fixed%2C%20Done%2C%20Implemented)%20AND%20fixVersion%20in%20(11.1%2C%2011.2%2C%2011.3%2C%2012.0)%20AND%20component%20in%20(%22php%20-%20Apache%20Config%20Files%22%2C%20%22php%20-%20Code%22%2C%20%22php%20-%20Code%20Analysis%22%2C%20%22php%20-%20Codeception%22%2C%20%22php%20-%20Composer%22%2C%20%22php%20-%20Debugger%22%2C%20%22php%20-%20Editor%22%2C%20%22php%20-%20Formatting%20%26%20Indentation%22%2C%20%22php%20-%20FTP%20Support%22%2C%20%22php%20-%20Navigation%22%2C%20%22php%20-%20Nette%22%2C%20%22php%20-%20PHPDoc%22%2C%20%22php%20-%20PHPUnit%22%2C%20%22php%20-%20Project%22%2C%20%22php%20-%20Refactoring%22%2C%20%22php%20-%20Smarty%22%2C%20%22php%20-%20Symfony%22%2C%20%22php%20-%20Twig%22%2C%20%22php%20-%20Zend%22)[here].
 
 In addition, Apache NetBeans 12.0 integrates out of the box a TypeScript editor, introduced in 11.3.
 
