--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -82,6 +82,11 @@ image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"
 image::jdk13-textblock.png[role="left", link="jdk13-textblock.png"]
 -- 
 
+[.feature]
+--
+image::TextBlockToString.gif[role="left", link="TextBlockToString.gif"]
+-- 
+
 ==== Java 12
 
 - link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
