--- a/netbeans.apache.org/src/content/download/nb121/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/index.asciidoc
@@ -31,7 +31,7 @@
 :experimental:
 :linkattrs:
 
-Welcome to Apache NetBeans 12.1!
+Welcome to Apache NetBeans 12.1, the first feature release of the Apache NetBeans 12 cycle!
 
 TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. The 12.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 12.1 to use the latest features and to provide feedback for the next LTS release, scheduled for 2021. Go here to download  link:/download/nb120/nb120.html[Apache NetBeans 12.0], the current LTS release.
 
