--- a/netbeans.apache.org/src/content/download/nb121/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/index.asciidoc
@@ -36,3 +36,44 @@ Welcome to Apache NetBeans 12.1, the first feature release of the Apache NetBean
 TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. The 12.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 12.1 to use the latest features and to provide feedback for the next LTS release, scheduled for 2021. Go here to download  link:/download/nb120/nb120.html[Apache NetBeans 12.0], the current LTS release.
 
 link:/download/nb121/nb121.html[Download, role="button success"]
+
+== Jakarta EE 8
+
+- Ability to create a Jakarta EE 8 project
+- Change an existing Maven web application to Jakarta EE 8.
+
+== C/C++
+
+Rudimentary C/C++ feature integration, which does not have as many features as the 8.2 C/C++ support, in other words, this is not fully featured, but it could help some of our users until the full support is complete. When 8.2 C/C++ plugins are installed, they should take precedence in 12.1. 
+
+- Rudimentary C/C++ project that allows the user to provide commands for the build/run actions and some additional settings.
+- Syntax highlighting using TextMate grammars.
+- Code completion and other editing support is through the Language Server Protocol, using the ccls language server, which the users need to provide themselves;
+-- A *very* rudimentary debugger using gdb (based on the Ant debugger, and gdb interface from CND).
+
+More details: https://github.com/apache/netbeans/pull/2234
+
+== Gradle
+
+- Gradle is enabled with Java SE
+- Added support for Generated Directories and proper handling of  annotation processors
+
+== PHP
+
+- Add new actions for Composer (https://github.com/apache/netbeans/pull/2173)
+- Show `false` and `true` instead of `0` and `1` as boolean values in the Variables window of the debugger (https://github.com/apache/netbeans/pull/2178)
+- Improve/Fix code analysis features(e.g.https://github.com/apache/netbeans/pull/2246, https://github.com/apache/netbeans/pull/2249)
+
+== HTML
+
+- Update the validator.jar (https://github.com/apache/netbeans/pull/2217)
+- Enable the code template completion (https://github.com/apache/netbeans/pull/2253)
+- Code completion and syntax highlighting for <script type="module"></script> (https://github.com/apache/netbeans/pull/2184)
+
+== CSS
+
+- Add formatting options (https://github.com/apache/netbeans/pull/2257) only "Tabs And Indents"
+
+== Miscellaneous
+
+- Launcher detects JDK installed by SDKMAN on Linux and Mac.
