Correcting PMC vote links

--- a/netbeans.apache.org/src/content/download/nb121/nb121.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/nb121.asciidoc
@@ -101,8 +101,8 @@ Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
 
-- link:https://lists.apache.org/thread.html/481ef107e6f5d8d6dfb35a831134bbbce3c6adb725e915ea8e5159d6@%3Cdev.netbeans.apache.org%3E[PMC vote]
-- link:https://lists.apache.org/thread.html/b5d559bf860a5e6f5a908afec791c07ef1e0d0d16e6c739c73c454d9@%3Cdev.netbeans.apache.org%3E[PMC vote result]
+- link:https://lists.apache.org/thread.html/r336e05a551f56a5b20dc3070f9ddf470cdd3a166c55272ed128d6c39%40%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/r40624d985640c05e24899bfca3df05b0f48e68fd5f0ab3008dfde335%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
 
 == Earlier releases
 
