Include list of pull requests

--- a/netbeans.apache.org/src/content/download/nb121/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/index.asciidoc
@@ -37,12 +37,16 @@ TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. Th
 
 link:/download/nb121/nb121.html[Download, role="button success"]
 
-== Jakarta EE 8
+The full list of pull requests integrated in the 12.1 timeframe link:https://github.com/apache/netbeans/milestone/6?closed=1[is found here].
+
+== Highlights
+
+=== Jakarta EE 8
 
 - Ability to create a Jakarta EE 8 project
 - Change an existing Maven web application to Jakarta EE 8.
 
-== C/C++
+=== C/C++
 
 Rudimentary C/C++ feature integration, which does not have as many features as the 8.2 C/C++ support, in other words, this is not fully featured, but it could help some of our users until the full support is complete. When 8.2 C/C++ plugins are installed, they should take precedence in 12.1. 
 
@@ -53,12 +57,12 @@ Rudimentary C/C++ feature integration, which does not have as many features as t
 
 More details: https://github.com/apache/netbeans/pull/2234
 
-== Gradle
+=== Gradle
 
 - Gradle is enabled with Java SE
 - Added support for Generated Directories and proper handling of  annotation processors
 
-== PHP
+=== PHP
 
 - Add new actions for Composer (https://github.com/apache/netbeans/pull/2173)
 - Show `false` and `true` instead of `0` and `1` as boolean values in the Variables window of the debugger (https://github.com/apache/netbeans/pull/2178)
@@ -70,10 +74,10 @@ More details: https://github.com/apache/netbeans/pull/2234
 - Enable the code template completion (https://github.com/apache/netbeans/pull/2253)
 - Code completion and syntax highlighting for <script type="module"></script> (https://github.com/apache/netbeans/pull/2184)
 
-== CSS
+=== CSS
 
 - Add formatting options (https://github.com/apache/netbeans/pull/2257) only "Tabs And Indents"
 
-== Miscellaneous
+=== Miscellaneous
 
 - Launcher detects JDK installed by SDKMAN on Linux and Mac.
