--- a/netbeans.apache.org/src/content/download/nb121/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/index.asciidoc
@@ -37,9 +37,9 @@ TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. Th
 
 link:/download/nb121/nb121.html[Download, role="button success"]
 
-The full list of pull requests integrated in the 12.1 timeframe link:https://github.com/apache/netbeans/milestone/6?closed=1[is found here].
-
 == Highlights
+
+The full list of pull requests integrated in the 12.1 timeframe link:https://github.com/apache/netbeans/milestone/6?closed=1[is found here], while the highlights are listed below.
 
 === Jakarta EE 8
 
