Fix the daily build links

--- a/netbeans.apache.org/src/content/download/dev/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/dev/index.asciidoc
@@ -30,7 +30,7 @@ download (unsupported) daily development builds.
 
 == Daily builds
 
-Please visit link:https://builds.apache.org/job/netbeans-linux/[https://builds.apache.org/job/netbeans-linux/] and link:https://builds.apache.org/job/netbeans-windows/[https://builds.apache.org/job/netbeans-windows/] for the daily builds.
+Please visit link:https://ci-builds.apache.org/job/Netbeans/job/netbeans-linux/[https://ci-builds.apache.org/job/Netbeans/job/netbeans-linux/] for the daily builds.
 
 == Building from source
 
