Update and link in pages for Apache NetBeans 12.1 release; fix various download links.

--- a/netbeans.apache.org/src/content/download/nb121/nb121.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/nb121.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 12.1 was released on August 31, 2020.
+Apache NetBeans 12.1 was released on September 1, 2020.
 See link:/download/nb121/index.html[Apache NetBeans 12.1 Features] for a full list of features.
 
 ////
@@ -45,24 +45,24 @@ Apache NetBeans 12.1 is available for download from your closest Apache mirror.
 
 - Binaries: 
 link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-bin.zip[netbeans-12.1-bin.zip] (
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.sha512[SHA-512],
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.asc[PGP ASC])
+link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.asc[PGP ASC])
 
 - Installers:
  
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe[Apache-NetBeans-12.1-bin-windows-x64.exe] (
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.sha512[SHA-512],
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.asc[PGP ASC])
+link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.asc[PGP ASC])
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh[Apache-NetBeans-12.1-bin-linux-x64.sh] (
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.sha512[SHA-512],
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.asc[PGP ASC])
+link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.asc[PGP ASC])
 * link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg[Apache-NetBeans-12.1-bin-macosx.dmg] (
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.sha512[SHA-512],
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.asc[PGP ASC])
+link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.asc[PGP ASC])
 
-- Source: link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-source.zip[netbeans-12.1-source.zip] 
-(link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-source.zip.sha512[SHA-512],
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-source.zip.asc[PGP ASC])
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-source.zip[netbeans-12.1-source.zip] (
+link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-source.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/12.1/javadoc
 
