--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -40,6 +40,12 @@ Apache NetBeans is released four times a year. For details, see link:https://cwi
 TIP: Our annual May/June release is a
 long-term support (LTS) release that benefits from our link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT+FAQ[NetCAT community testing process], and remains available and supported for a year.  Our other quarterly releases provide early access to new features, which are tested and consolidated in the subsequent LTS release.
 
+== Apache NetBeans 12 feature update 1 (NB 12.1)
+
+Latest version of the IDE, released on September 1, 2020.
+
+link:/download/nb121/index.html[Features, role="button"] link:/download/nb121/nb121.html[Download, role="button success"]
+
 == Apache NetBeans 12 LTS (NB 12.0)
 
 Latest LTS version of the IDE, released on June 4, 2020.
