Including Java section

--- a/netbeans.apache.org/src/content/download/nb121/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/index.asciidoc
@@ -46,6 +46,13 @@ The full list of pull requests integrated in the 12.1 timeframe link:https://git
 - Ability to create a Jakarta EE 8 project
 - Change an existing Maven web application to Jakarta EE 8.
 
+== Java Editor
+
+- nb-javac for Java 14 usage when running NetBeans on earlier JDK releases (https://github.com/apache/netbeans/pull/2277)
+- New file template for creating Records (https://github.com/apache/netbeans/pull/2183)
+- Better support for code completion for Records (https://github.com/apache/netbeans/pull/2222)
+- Refactoring support for Records (https://github.com/apache/netbeans/pull/2164)
+
 === C/C++
 
 Rudimentary C/C++ feature integration, which does not have as many features as the 8.2 C/C++ support, in other words, this is not fully featured, but it could help some of our users until the full support is complete. When 8.2 C/C++ plugins are installed, they should take precedence in 12.1. 
