--- a/netbeans.apache.org/src/content/download/dev/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/dev/index.asciidoc
@@ -45,7 +45,7 @@ Once you're all set, enter the `netbeans` directory:
 
 - To build the Apache NetBeans IDE, according to the JDK:
   ** On JDK 8, type `ant build`
-  ** On JDK 9 or later, type `ant build`, with this flag `-Dpermit.jdk9.builds=true`
+  ** On JDK 9 or later, type `ant build -Dpermit.jdk9.builds=true`
 - The build will generate a binary zip bundle of the IDE at `./nbbuild/NetBeans-<version-hash>-release.zip`, and you can:
   ** Extract that zip in a place of your choosing and run `netbeans/bin/netbeans` (or `netbeans/bin/netbeans.exe` on Windows).
   ** Type `ant tryme` to run the Apache NetBeans IDE directly from the build folder rather than the zip for development purposes.
