--- a/netbeans.apache.org/src/content/download/nb113/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb113/index.asciidoc
@@ -17,7 +17,7 @@
      under the License.
 ////
 = Apache NetBeans 11.3 Features
-:jbake-type: page-noaside
+:jbake-type: page_noaside
 :jbake-tags: 11.3 features
 :jbake-status: published
 :keywords: Apache NetBeans 11.3 IDE features
