--- a/netbeans.apache.org/src/content/download/nb112/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb112/index.asciidoc
@@ -18,7 +18,7 @@
      under the License.
 ////
 = Apache NetBeans 11.2 Features
-:jbake-type: page-noaside
+:jbake-type: page_noaside
 :jbake-tags: 11.2 features
 :jbake-status: published
 :keywords: Apache NetBeans 11.2 IDE features
