Trivial typo fix

--- a/netbeans.apache.org/src/content/community/index.asciidoc
+++ b/netbeans.apache.org/src/content/community/index.asciidoc
@@ -27,7 +27,7 @@
 
 == Stay Informed
 
-The Apache NetBeans Community uses the link:mailing-lists.html[mailing lists] as the primary source of comunication. See how to stay informed and in touch with other NetBeans users and developers.
+The Apache NetBeans Community uses the link:mailing-lists.html[mailing lists] as the primary source of communication. See how to stay informed and in touch with other NetBeans users and developers.
 
 == Participate
 We welcome all kind of contributions. link:/participate/index.html[See how you can participate in Apache NetBeans].
