--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -42,9 +42,9 @@ The full list of pull requests integrated in the 12.2 timeframe link:https://git
 == Java Language
 
 === New JDK 14 and 15-Specific Java Language Features
- - Code coloring. Keywords "sealed", "non-sealed", and "permits" are highlighted conforming to the existing styles of all other Java keywords.
- - Code formatting for "sealed" type. Extended the Java code formatting feature to include "sealed" and "permits" clauses for the first time.
- - Auto-completion for "sealed" type. Added keyword "sealed" and "non-sealed" before "class" declaration. Added "permits" only in the allowed location, i.e., the "permits" clause is not allowed to be put before "extends" and "implements" clause, if present.
+ - *Code coloring.* Keywords "sealed", "non-sealed", and "permits" are highlighted conforming to the existing styles of all other Java keywords.
+ - *Code formatting for "sealed" type.* Extended the Java code formatting feature to include "sealed" and "permits" clauses for the first time.
+ - *Auto-completion for "sealed" type.* Added keyword "sealed" and "non-sealed" before "class" declaration. Added "permits" only in the allowed location, i.e., the "permits" clause is not allowed to be put before "extends" and "implements" clause, if present.
  - Fixed Record Formatting issue with use of annotation: https://github.com/apache/netbeans/pull/2391
  - Fixed issue: refactor record rename & move record file to other package: https://github.com/apache/netbeans/pull/2310 
  - Invoke code completion for "Record" variable name and the editor will analyze the context and then suggest choices that are reachable from the current caret position.
