--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -45,11 +45,11 @@ The full list of pull requests integrated in the 12.2 timeframe link:https://git
  - *Code coloring.* Keywords "sealed", "non-sealed", and "permits" are highlighted conforming to the existing styles of all other Java keywords.
  - *Code formatting for "sealed" type.* Extended the Java code formatting feature to include "sealed" and "permits" clauses for the first time.
  - *Auto-completion for "sealed" type.* Added keyword "sealed" and "non-sealed" before "class" declaration. Added "permits" only in the allowed location, i.e., the "permits" clause is not allowed to be put before "extends" and "implements" clause, if present.
- - Fixed Record Formatting issue with use of annotation: https://github.com/apache/netbeans/pull/2391
- - Fixed issue: refactor record rename & move record file to other package: https://github.com/apache/netbeans/pull/2310 
- - Invoke code completion for "Record" variable name and the editor will analyze the context and then suggest choices that are reachable from the current caret position.
- - Fixed JavaDoc listing for class-type RECORD on auto completion: https://github.com/apache/netbeans/pull/2412
- - nb-javac fork supports JDK 15: https://github.com/apache/netbeans/pull/2408
+ - *Enhancement for Record variable.* Invoke code completion for "Record" variable name and the editor will analyze the context and then suggest choices that are reachable from the current caret position.
+ - *Fixed Record Formatting issue with use of annotation.* https://github.com/apache/netbeans/pull/2391
+ - *Fixed Record Refactoring issue.* refactor record rename & move record file to other package: https://github.com/apache/netbeans/pull/2310 
+ - *Fixed Record JavaDoc.* JavaDoc listing for class-type RECORD on auto completion: https://github.com/apache/netbeans/pull/2412
+ - *nb-javac fork.* Now supports JDK 15: https://github.com/apache/netbeans/pull/2408
  
 === New Miscellaneous Java Language Features
  - Show types for chained method invocations: https://github.com/apache/netbeans/pull/2365
