--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -52,20 +52,20 @@ The full list of pull requests integrated in the 12.2 timeframe link:https://git
  - *nb-javac fork.* Now supports JDK 15: https://github.com/apache/netbeans/pull/2408
  
 === New Miscellaneous Java Language Features
- - Show types for chained method invocations: https://github.com/apache/netbeans/pull/2365
- - Create new Class/Interface/Enum when copy-paste raw text: https://github.com/apache/netbeans/pull/2334
- - Create only one instance of javac: https://github.com/apache/netbeans/pull/2305
+ - *Show types for chained method invocations.* https://github.com/apache/netbeans/pull/2365
+ - *Create new Class/Interface/Enum when copy-paste raw text.* https://github.com/apache/netbeans/pull/2334
+ - *Create only one instance of javac.* https://github.com/apache/netbeans/pull/2305
 
 == JavaFX
- - Avoid assertion & NPE in fxml code completion: https://github.com/apache/netbeans/pull/2399
- - Disallow FXML controller in default package: https://github.com/apache/netbeans/pull/2331
- - Include immutable objects for fxml editor identification: https://github.com/apache/netbeans/pull/2333
+ - *Avoid assertion & NPE in fxml code completion.* https://github.com/apache/netbeans/pull/2399
+ - *Disallow FXML controller in default package.* https://github.com/apache/netbeans/pull/2331
+ - *Include immutable objects for fxml editor identification.* https://github.com/apache/netbeans/pull/2333
 
 == Java Web
- - Remove Derby integration from Payara Server modules: https://github.com/apache/netbeans/pull/2425
- - Web Project Properties Dialog fails to save Relative URL: https://github.com/apache/netbeans/pull/2423
- - JavaServer Faces Catalog fixes: https://github.com/apache/netbeans/pull/2431
- - Fix Spring Web MVC 5.2.9 integration: https://github.com/apache/netbeans/pull/2380
+ - *Remove Derby integration from Payara Server modules.* https://github.com/apache/netbeans/pull/2425
+ - *Web Project Properties Dialog fails to save Relative URL.* https://github.com/apache/netbeans/pull/2423
+ - *JavaServer Faces Catalog fixes.* https://github.com/apache/netbeans/pull/2431
+ - *Fix Spring Web MVC 5.2.9 integration.* https://github.com/apache/netbeans/pull/2380
 
 == Java Build Systems
  - Added Gradle wrapper distribution change detection: https://github.com/apache/netbeans/pull/2366
@@ -106,7 +106,7 @@ The full list of pull requests integrated in the 12.2 timeframe link:https://git
  - TestNG and upgrade from 6.8.1 to 6.14.3: https://github.com/apache/netbeans/pull/2350
 
 == Miscellaneous
- - Detect JDK-s installed with SDKMan and Debian: https://github.com/apache/netbeans/pull/2329
- - Check unpack200 and warn the user on JDK14+: https://github.com/apache/netbeans/pull/2317
- - Update to the mac os installer as it was failing on Big Sur: https://github.com/apache/netbeans/pull/2353
- - Avoiding use of Nashorn (removed in JDK 15) in J2SE multi-module: https://github.com/apache/netbeans/pull/2322
+ - *Detect JDKs.* Installed with SDKMan and Debian: https://github.com/apache/netbeans/pull/2329
+ - *Check unpack200.* Warn the user on JDK14+: https://github.com/apache/netbeans/pull/2317
+ - *Update to the Mac OS X installer.* As it was failing on Big Sur: https://github.com/apache/netbeans/pull/2353
+ - *Avoiding use of Nashorn.* Nashorn was removed in JDK 15, applicable to J2SE multi-module: https://github.com/apache/netbeans/pull/2322
