--- a/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
@@ -33,7 +33,7 @@ for important requirements for download pages for Apache projects.
 :toc-title:
 :icons: font
 
-Apache NetBeans 12.2 was released on ...
+Apache NetBeans 12.2 was released in November, 2020.
 See link:/download/nb122/index.html[Apache NetBeans 12.2 Features] for a full list of features.
 
 ////
@@ -42,3 +42,69 @@ NOTE: It's mandatory to link against https://www.apache.org for the sums & keys.
 NOTE: It's NOT recommended to link to github.
 ////
 Apache NetBeans 12.2 is available for download from your closest Apache mirror.
+
+- Binaries: 
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-bin.zip[netbeans-12.2-bin.zip] (
+link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-bin.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-bin.zip.asc[PGP ASC])
+
+- Installers:
+ 
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe[Apache-NetBeans-12.2-bin-windows-x64.exe] (
+link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh[Apache-NetBeans-12.2-bin-linux-x64.sh] (
+link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg[Apache-NetBeans-12.2-bin-macosx.dmg] (
+link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg.asc[PGP ASC])
+
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-source.zip[netbeans-12.2-source.zip] (
+link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-source.zip.sha512[SHA-512],
+link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-source.zip.asc[PGP ASC])
+
+- Javadoc for this release is available at https://bits.netbeans.org/12.2/javadoc
+
+////
+NOTE: Using https below is highly recommended.
+////
+Officially, it is important that you link:https://www.apache.org/dyn/closer.cgi#verify[verify the integrity]
+of the downloaded files using the PGP signatures (.asc file) or a hash (.sha512 files).
+The PGP keys used to sign this release are available link:https://archive.apache.org/dist/netbeans/KEYS[here].
+
+Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
+
+== Deployment platforms
+
+Apache NetBeans 12.2 runs on JDK LTS releases 8 and 11, as well as on JDK 15, i.e., the current JDK release at the time of this NetBeans release.
+
+
+== Building from source
+
+To build Apache NetBeans 12.2 from source you need:
+
+. A distribution of OpenJDK 8 or 11.
+. Apache Ant 1.10 or greater (https://ant.apache.org).
+
+Once you have everything installed then:
+
+1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-source.zip[netbeans-12.2-source.zip]
+in a directory of your liking.
+
+[start=2]
+. `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
+Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
+
+== Community approval
+
+As in any other Apache Project, the Apache NetBeans Community approved this release
+through the following voting processes in our link:/community/mailing-lists.html[mailing lists] :
+
+- link:https://lists.apache.org/thread.html/rb7f838f8abb46466ff46bb00c05ecb7ac92a65f710d7f81a2c2b849b%40%3Cdev.netbeans.apache.org%3E[PMC vote]
+- link:https://lists.apache.org/thread.html/r2bc401c5cc129581f31bf6dbcbde2c79cbc915d73563378f300f6dd1%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
+
+== Earlier releases
+
+Please visit the link:/download/index.html[Apache NetBeans Download page]
+for further details.
