--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -35,6 +35,8 @@ Welcome to Apache NetBeans 12.2, the first feature release of the Apache NetBean
 
 TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0. The 12.2 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 12.2 to use the latest features and to provide feedback for the next LTS release, scheduled for 2021. Go here to download  link:/download/nb120/nb120.html[Apache NetBeans 12.0], the current LTS release.
 
+link:/download/nb122/nb122.html[Download, role="button success"]
+
 == Highlights
 
 The full list of pull requests integrated in the 12.2 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.2[is found here], while the highlights are listed below.
