--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -55,6 +55,10 @@ The full list of pull requests integrated in the 12.2 timeframe link:https://git
  
 === New Miscellaneous Java Language Features
  - *Show types for chained method invocations.* https://github.com/apache/netbeans/pull/2365
+ [.feature]
+--
+image::93015822-d1c18980-f5bc-11ea-8e33-34398623af7d-3.png[role="left", link="93015822-d1c18980-f5bc-11ea-8e33-34398623af7d-3.png.png"]
+-- 
  - *Create new Class/Interface/Enum when copy-paste raw text.* https://github.com/apache/netbeans/pull/2334
  - *Create only one instance of javac.* https://github.com/apache/netbeans/pull/2305
 
