Added missing PHP 8.0 features implemented
Added three features from PHP 8.0 support.
Restructured PHP 8.0 features.

--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -87,13 +87,16 @@ image::93015822-d1c18980-f5bc-11ea-8e33-34398623af7d-3.png[role="left", link="93
  - Maven project open use no-lock getModuleName: https://github.com/apache/netbeans/pull/2340
 
 == PHP & JavaScript
- - PHP 8.0 support: https://github.com/apache/netbeans/pull/2457
- - PHP 8.0 Support: Allow ::class on objects part: https://github.com/apache/netbeans/pull/2295
- - PHP 8.0 Support: Allow trailing comma in parameter list: https://github.com/apache/netbeans/pull/2269
- - PHP 8.0 Support: Non-capturing catches part: https://github.com/apache/netbeans/pull/2265
- - PHP 8.0 Support: throw Expression part: https://github.com/apache/netbeans/pull/2280
- - PHP 8.0 Support: Match expression v2: https://github.com/apache/netbeans/pull/2303
- - PHP 8.0 Support: Static return type: https://github.com/apache/netbeans/pull/2335
+ - PHP 8.0 support
+   * Union Types: https://github.com/apache/netbeans/pull/2319
+   * Nullsafe operator: https://github.com/apache/netbeans/pull/2446
+   * Match expression: https://github.com/apache/netbeans/pull/2303
+   * throw Expression: https://github.com/apache/netbeans/pull/2280
+   * Non-capturing catches: https://github.com/apache/netbeans/pull/2265
+   * Allow ::class on objects: https://github.com/apache/netbeans/pull/2295
+   * Allow trailing comma in parameter list: https://github.com/apache/netbeans/pull/2269
+   * Static return type: https://github.com/apache/netbeans/pull/2335
+   * Mixed type: https://github.com/apache/netbeans/pull/2342
  - Dependencies and infrastructure of JavaScript and HTML features cleaned up: https://github.com/apache/netbeans/pull/2424
  - html parser dont wait for projects open: https://github.com/apache/netbeans/pull/2341
  - Removed obsolete Oracle JET support: https://github.com/apache/netbeans/pull/2367
