--- a/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
@@ -44,24 +44,19 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 12.2 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-bin.zip[netbeans-12.2-bin.zip] (
-link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-bin.zip.sha512[SHA-512],
+link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-bin.zip[netbeans-12.2-bin.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-bin.zip.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe[Apache-NetBeans-12.2-bin-windows-x64.exe] (
-link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe.sha512[SHA-512],
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe[Apache-NetBeans-12.2-bin-windows-x64.exe] (link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh[Apache-NetBeans-12.2-bin-linux-x64.sh] (
-link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh.sha512[SHA-512],
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh[Apache-NetBeans-12.2-bin-linux-x64.sh] (link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg[Apache-NetBeans-12.2-bin-macosx.dmg] (
-link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg.sha512[SHA-512],
+* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg[Apache-NetBeans-12.2-bin-macosx.dmg] (link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/12.2/Apache-NetBeans-12.2-bin-macosx.dmg.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-source.zip[netbeans-12.2-source.zip] (
-link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-source.zip.sha512[SHA-512],
+- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.2/netbeans-12.2-source.zip[netbeans-12.2-source.zip] (link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-source.zip.sha512[SHA-512],
 link:https://downloads.apache.org/netbeans/netbeans/12.2/netbeans-12.2-source.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/12.2/javadoc
