Apache NetBeans 12.2 Release

--- a/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/nb122.asciidoc
@@ -70,12 +70,14 @@ The PGP keys used to sign this release are available link:https://archive.apache
 
 Apache NetBeans can also be installed as a self-contained link:https://snapcraft.io/netbeans[snap package] on Linux.
 
-== Deployment platforms
+
+== Deployment Platforms
 
 Apache NetBeans 12.2 runs on JDK LTS releases 8 and 11, as well as on JDK 15, i.e., the current JDK release at the time of this NetBeans release.
 
+TIP: The current JDKs have an issue on Mac OS Big Sur, that causes freezes on dialogs. That could be fixed by applying the workaround described at link:https://issues.apache.org/jira/browse/NETBEANS-5037?focusedCommentId=17234878&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-17234878[NETBEANS-5037] .
 
-== Building from source
+== Building from Source
 
 To build Apache NetBeans 12.2 from source you need:
 
@@ -91,7 +93,7 @@ in a directory of your liking.
 . `cd` to that directory, and then run `ant` to build the Apache NetBeans IDE.
 Once built you can run the IDE by typing `./nbbuild/netbeans/bin/netbeans`
 
-== Community approval
+== Community Approval
 
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our link:/community/mailing-lists.html[mailing lists]:
@@ -99,7 +101,7 @@ through the following voting processes in our link:/community/mailing-lists.html
 - link:https://lists.apache.org/thread.html/rb7f838f8abb46466ff46bb00c05ecb7ac92a65f710d7f81a2c2b849b%40%3Cdev.netbeans.apache.org%3E[PMC vote]
 - link:https://lists.apache.org/thread.html/r2bc401c5cc129581f31bf6dbcbde2c79cbc915d73563378f300f6dd1%40%3Cdev.netbeans.apache.org%3E[PMC vote result]
 
-== Earlier releases
+== Earlier Releases
 
 Please visit the link:/download/index.html[Apache NetBeans Download page]
 for further details.
