--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -29,6 +29,12 @@
 Older Apache NetBeans releases and pre-Apache NetBeans releases can still be
 downloaded, but are no longer supported.
 
+== Apache NetBeans 12 feature update 1 (NB 12.1)
+
+Apache NetBeans 12.1 was released on September 5, 2020.
+
+link:/download/nb121/index.html[Features, role="button"] link:/download/nb121/nb121.html[Download, role="button success"]
+
 == Apache NetBeans 11 feature update 3 (NB 11.3)
 
 Apache NetBeans 11.3 was released on February 24, 2020.
