--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -115,6 +115,7 @@ image::93015822-d1c18980-f5bc-11ea-8e33-34398623af7d-3.png[role="left", link="93
  - TestNG and upgrade from 6.8.1 to 6.14.3: https://github.com/apache/netbeans/pull/2350
 
 == Miscellaneous
+ - *Fix for Mac OS X Big Sur.* Fix call to find jdkhome using /usr/libexec/java_home: https://github.com/apache/netbeans/pull/2547
  - *Detect JDKs.* Installed with SDKMan and Debian: https://github.com/apache/netbeans/pull/2329
  - *Check unpack200.* Warn the user on JDK14+: https://github.com/apache/netbeans/pull/2317
  - *Update to the Mac OS X installer.* As it was failing on Big Sur: https://github.com/apache/netbeans/pull/2353
