--- a/netbeans.apache.org/src/content/download/nb122/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb122/index.asciidoc
@@ -61,6 +61,9 @@ image::93015822-d1c18980-f5bc-11ea-8e33-34398623af7d-3.png[role="left", link="93
 -- 
  - *Create new Class/Interface/Enum when copy-paste raw text.* https://github.com/apache/netbeans/pull/2334
  - *Create only one instance of javac.* https://github.com/apache/netbeans/pull/2305
+ 
+=== NetBeans Java Features in VS Code
+ - *Java Editor and Java debugger in VS Code.* https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+Extension+for+Visual+Studio+Code
 
 == JavaFX
  - *Avoid assertion & NPE in fxml code completion.* https://github.com/apache/netbeans/pull/2399
