--- a/netbeans.apache.org/src/content/download/nb121/nb121.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb121/nb121.asciidoc
@@ -44,25 +44,25 @@ NOTE: It's NOT recommended to link to github.
 Apache NetBeans 12.1 is available for download from your closest Apache mirror.
 
 - Binaries: 
-link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-bin.zip[netbeans-12.1-bin.zip] (
-link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.asc[PGP ASC])
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-bin.zip[netbeans-12.1-bin.zip] (
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-bin.zip.asc[PGP ASC])
 
 - Installers:
  
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe[Apache-NetBeans-12.1-bin-windows-x64.exe] (
-link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh[Apache-NetBeans-12.1-bin-linux-x64.sh] (
-link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.asc[PGP ASC])
-* link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg[Apache-NetBeans-12.1-bin-macosx.dmg] (
-link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe[Apache-NetBeans-12.1-bin-windows-x64.exe] (
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-windows-x64.exe.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh[Apache-NetBeans-12.1-bin-linux-x64.sh] (
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-linux-x64.sh.asc[PGP ASC])
+* link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg[Apache-NetBeans-12.1-bin-macosx.dmg] (
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/Apache-NetBeans-12.1-bin-macosx.dmg.asc[PGP ASC])
 
-- Source: link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-source.zip[netbeans-12.1-source.zip] (
-link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-source.zip.sha512[SHA-512],
-link:https://downloads.apache.org/netbeans/netbeans/12.1/netbeans-12.1-source.zip.asc[PGP ASC])
+- Source: link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-source.zip[netbeans-12.1-source.zip] (
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-source.zip.sha512[SHA-512],
+link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-source.zip.asc[PGP ASC])
 
 - Javadoc for this release is available at https://bits.netbeans.org/12.1/javadoc
 
@@ -108,7 +108,7 @@ To build Apache NetBeans 12.1 from source you need:
 
 Once you have everything installed then:
 
-1. Unzip link:https://www.apache.org/dyn/closer.cgi/netbeans/netbeans/12.1/netbeans-12.1-source.zip[netbeans-12.1-source.zip]
+1. Unzip link:https://archive.apache.org/dist/netbeans/netbeans/12.1/netbeans-12.1-source.zip[netbeans-12.1-source.zip]
 in a directory of your liking.
 
 [start=2]
