Added Validating issues
Added section how to validate reported issues.

--- a/netbeans.apache.org/src/content/participate/index.asciidoc
+++ b/netbeans.apache.org/src/content/participate/index.asciidoc
@@ -41,6 +41,15 @@ You will need to follow the link:submit-pr.html#contributing-code[contributing c
 If your contribution code is owned or developped in another organization outside Apache. Your organization may want to *donate* this contribution to Apache NetBeans project.
 You will need to follow this link:submit-pr.html#donating-code[donating code] procedure.
 
+== Validating issues
+
+You want to help but don't feel like writing code?
+Verify link:https://issues.apache.org/jira/projects/NETBEANS/issues[reported issues].
+
+- Check that issues contain link:report-issue.html[information] necessary to reproduce the issue.
+- Check component assignment.
+- Try reproducing the issue in link:/download/index.html[latest version] of NetBeans and update Affected Versions.
+
 == Reporting issues
 
 See link:report-issue.html[reporting issues] for instructions on how to report an issue.
