netbeans-vm1 updates (#515)
Co-authored-by: Antonio Vieiro <vieiro@apache.org>

--- a/netbeans.apache.org/src/content/participate/netcat.asciidoc
+++ b/netbeans.apache.org/src/content/participate/netcat.asciidoc
@@ -127,7 +127,7 @@ NetCAT programs. As the NetCAT coordinator you will be responsible for:
 - updating NetCAT web content mainly prior to start of the program
 - sending an invite message and promoting the program to assemble enough NetCAT participants
 - forming NetCAT tribes, finding their leaders and supporting them throughout the program
-- maintaining link:http://netbeans-vm.apache.org/synergy[Synergy] (users, tribes and test runs) to have development builds fully tested and Release Candidate build certified
+- maintaining link:http://netbeans-vm1.apache.org/synergy[Synergy] (users, tribes and test runs) to have development builds fully tested and Release Candidate build certified
 - watching quality status and progress of stabilization through JIRA bug dashboard and discussions on NetCAT mailing list
 - if needed encouraging higher participation in the program by writing weekly status reports, organizing online meetings, creating online surveys etc.
 - creating final Community Acceptance survey, processing and publishing its results
