[NETBEANS-5338] Added more prominent link to JIRA
https://issues.apache.org/jira/browse/NETBEANS-5338

Added emphasized link to JIRA.

--- a/netbeans.apache.org/src/content/participate/report-issue.asciidoc
+++ b/netbeans.apache.org/src/content/participate/report-issue.asciidoc
@@ -42,3 +42,6 @@ Please provide the following information to reproduce your issues when you submi
 - NetBeans version (Affects Version/s)
 - JDK version (Environment)
 - OS (Environment)
+
+link:https://issues.apache.org/jira/projects/NETBEANS/issues[Open JIRA, role="button success"]
+
