--- a/netbeans.apache.org/src/content/download/archive/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/archive/index.asciidoc
@@ -73,8 +73,7 @@ link:/download/nb90/[Features, role="button"] link:/download/nb90/nb90.html[Down
 
 == Pre-Apache NetBeans versions
 
-- https://netbeans.org/downloads/old/8.2/
-- https://netbeans.org/downloads/old/8.1/
-- https://netbeans.org/downloads/old/8.0/
-- https://netbeans.org/downloads/old/7.4/
+Oracle still distributes previous versions of NetBeans bundled with their JDK.
+
+-  link:https://www.oracle.com/technetwork/es/java/javase/downloads/jdk-netbeans-jsp-3413139-esa.html[JDK 8u111 with NetBeans 8.2]
 
