--- a/netbeans.apache.org/src/content/download/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/index.asciidoc
@@ -40,11 +40,11 @@ Apache NetBeans is released four times a year. For details, see link:https://cwi
 TIP: Our annual May/June release is a
 long-term support (LTS) release that benefits from our link:https://cwiki.apache.org/confluence/display/NETBEANS/NetCAT+FAQ[NetCAT community testing process], and remains available and supported for a year.  Our other quarterly releases provide early access to new features, which are tested and consolidated in the subsequent LTS release.
 
-== Apache NetBeans 12 feature update 2 (NB 12.2)
+== Apache NetBeans 12 feature update 3 (NB 12.3)
 
-Latest version of the IDE, released on December 5, 2020.
+Latest version of the IDE, released on March 3, 2021.
 
-link:/download/nb122/index.html[Features, role="button"] link:/download/nb122/nb122.html[Download, role="button success"]
+link:/download/nb123/nb123.html[Download, role="button success"]
 
 == Apache NetBeans 12 LTS (NB 12.0)
 
