Adding link to closed PRs

--- a/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/nb123.asciidoc
@@ -34,7 +34,7 @@ for important requirements for download pages for Apache projects.
 :icons: font
 
 Apache NetBeans 12.3 was released March 3, 2021.
-See link:/download/nb123/index.html[Apache NetBeans 12.3 Features] for a full list of features.
+See link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.3[Apache NetBeans 12.3 pull requests] for what's been added to this release.
 
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
