PHP enhancements for 12.3

--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -41,8 +41,36 @@ link:/download/nb123/nb123.html[Download, role="button success"]
 
 The full list of pull requests integrated in the 12.3 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.3[is found here], while the highlights are listed below.
 
-== Java Language
-
 == PHP & JavaScript
+
+=== PHP 8.0 Support
+ - Constructor Property Promotion: https://github.com/apache/netbeans/pull/2674
+ - Named Arguments: https://github.com/apache/netbeans/pull/2704
+ - Attribute Syntax: https://github.com/apache/netbeans/pull/2640
+ - Allow trailing comma in closure use lists: https://github.com/apache/netbeans/pull/2692
+
+NOTE on PHP 8.0 support
+ - Complete PHP 8.0 syntax is supported.
+ - Code completion for attributes and named parameters is not implemented yet.
+
+=== Improvements
+ - Show and change the PHP Version of project properties on the status bar: https://github.com/apache/netbeans/pull/2681
+ - Added PSR-4 hints: https://github.com/apache/netbeans/pull/2630
+ - Use complete Composer package name: https://github.com/apache/netbeans/pull/2583
+ - Add the project settings for XML configuration of phpDocumentor: https://github.com/apache/netbeans/pull/2678
+ - Mark unused private constants: https://github.com/apache/netbeans/pull/2555
+ - PHP debugger - support for resolved breakpoints: https://github.com/apache/netbeans/pull/2665
+ - PHP debugger - enable 'return' breakpoint: https://github.com/apache/netbeans/pull/2659
+ - PHP debugger - fix display of long strings: https://github.com/apache/netbeans/pull/2673
+ - Improved display of array parameter: https://github.com/apache/netbeans/pull/2535
+ - Improvements for constants in code completion: https://github.com/apache/netbeans/pull/2536 and https://github.com/apache/netbeans/pull/2578
+ - Remove consecutive empty lines when formatting PHP code: https://github.com/apache/netbeans/pull/2573
+
+=== Fixes
+ - Shared settings for PHP code generators: https://github.com/apache/netbeans/pull/2691
+ - Fix code completion for traits of use and group use statements: https://github.com/apache/netbeans/pull/2533
+ - Fix anonymous function formatting: https://github.com/apache/netbeans/pull/2614
+ - Fix formatting in executable script: https://github.com/apache/netbeans/pull/2581
+ - Cancel Find Usages action: https://github.com/apache/netbeans/pull/2550
 
 == Miscellaneous
