Tweaks to PHP section

--- a/netbeans.apache.org/src/content/download/nb123/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb123/index.asciidoc
@@ -41,7 +41,7 @@ link:/download/nb123/nb123.html[Download, role="button success"]
 
 The full list of pull requests integrated in the 12.3 timeframe link:https://github.com/apache/netbeans/pulls?q=is%3Aclosed+milestone%3A12.3[is found here], while the highlights are listed below.
 
-== PHP & JavaScript
+== PHP
 
 === PHP 8.0 Support
  - Constructor Property Promotion: https://github.com/apache/netbeans/pull/2674
@@ -49,7 +49,7 @@ The full list of pull requests integrated in the 12.3 timeframe link:https://git
  - Attribute Syntax: https://github.com/apache/netbeans/pull/2640
  - Allow trailing comma in closure use lists: https://github.com/apache/netbeans/pull/2692
 
-NOTE on PHP 8.0 support
+*NOTE on PHP 8.0 support*
  - Complete PHP 8.0 syntax is supported.
  - Code completion for attributes and named parameters is not implemented yet.
 
